--- a/index.css
+++ b/index.css
@@ -422,7 +422,10 @@ div.title, caption.title { color: #596673; font-weight: bold; }
 div.toclevel1 { margin-top: 0.2em; font-size: 16px; }
 div.toclevel2 { margin-top: 0.15em; font-size: 14px; }
 em, dt, td.hdlist1 { color: black; }
-strong { color: #3E4349; }
+strong { 
+color: #3E4349; 
+word-wrap: normal;
+}
 a { color: #004B6B; text-decoration: none; border-bottom: 1px dotted #004B6B; }
 a:visited { color: #615FA0; border-bottom: 1px dotted #615FA0; }
 a:hover { color: #6D4100; border-bottom: 1px solid #6D4100; }
