--- a/index.css
+++ b/index.css
@@ -425,8 +425,10 @@ a { color: #004B6B; text-decoration: none; border-bottom: 1px dotted #004B6B; }
 a:visited { color: #615FA0; border-bottom: 1px dotted #615FA0; }
 a:hover { color: #6D4100; border-bottom: 1px solid #6D4100; }
 
+/*
 div.tableblock > table, table.tableblock { border: 3px solid #E8E8E8; }
 th.tableblock, td.tableblock { border: 1px solid #E8E8E8; }
+*/
 
 ul > li > * { color: #3E4349; }
 pre, tt, .monospaced { font-family: Consolas,Menlo,'Deja Vu Sans Mono','Bitstream Vera Sans Mono',monospace; }
@@ -503,7 +505,6 @@ div.table, table {
   max-width: 95%;
   border-collapse: collapse;
   border-spacing: 0;
-	border-style: solid;
 }
 
 div.table, div.informaltable {
