--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ img {
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
-  line-height: 1.5rem;
+  line-height: 1.5;
    }
   @media (min-width: 376px) {
     body {
