--- a/index.css
+++ b/index.css
@@ -1,11 +1,12 @@
 html {
   box-sizing: border-box;
-  font-size: 16px; }
+  font-size: 13px; }
 
 *, *:before, *:after {
   box-sizing: inherit; }
 
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+	-webkit-text-size-adjust: 100%;
   margin: 10px;
   padding: 0;
   font-weight: normal; }
@@ -48,263 +49,19 @@ img {
 /* Typography */
 body {
   font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
+  font-size: 13px;
   line-height: 1.5;
    }
   @media (min-width: 376px) {
     body {
-      font-size: 16px; } }
+      font-size: 13px; } }
   @media (min-width: 426px) {
     body {
-      font-size: 18px; } }
+      font-size: 13px; } }
   @media (min-width: 769px) {
     body {
-      font-size: 20px; } }
+      font-size: 13px; } }
 
-/*
-.content-grid {
-  margin: 0 auto;
-  max-width: calc(100% - 2rem); }
-  @media (min-width: 376px) {
-    .content-grid {
-      max-width: calc(100% - 2rem); } }
-  @media (min-width: 426px) {
-    .content-grid {
-      max-width: calc(100% - 4rem); } }
-  @media (min-width: 769px) {
-    .content-grid {
-      max-width: calc(100% - 8rem); } }
-  @media (min-width: 1025px) {
-    .content-grid {
-      max-width: calc(100% - 18rem); } }
-  @media (min-width: 1440px) {
-    .content-grid {
-      max-width: calc(100% - 30rem); } }
-
-a {
-	color: blue;
-  text-decoration: underline; }
-
-a:visited {
-  color: fuchsia;
-}
-
-input[type=button] {
-  background: #A5724E;
-  cursor: pointer;
-  text-decoration: none;
-  outline: none;
-  border: none;
-  border-width: 0;
-  box-shadow: 0 4px 9px rgba(0, 0, 0, 0.15);
-  color: #FFFFFF;
-  font-size: 0.75em;
-  letter-spacing: 0.07em;
-  text-transform: uppercase;
-  text-shadow: none;
-  text-align: center;
-  padding: 1rem 1.5rem;
-  min-width: 3.5em; }
-
-select {
-  border: 1px solid lightgrey;
-  height: 2.25em;
-  background: none;
-  font-size: 0.875em; }
-
-header {
-  display: flex;
-  align-items: center;
-  height: 3.5em;
-  }
-  header .content-grid {
-    display: flex;
-    flex: 1 0 auto;
-    align-items: center;
-    justify-content: flex-start; }
-  header .circle {
-    width: 2em;
-    height: 2em;
-    border-radius: 50%;
-    line-height: 2em;
-    text-align: center;
-    color: #FFFFFF;
-    border-color: #FFFFFF;
-    background-color: transparent;
-    border: 1px solid #FFFFFF;
-    margin-right: 0.75rem; }
-  header .title {
-    color: #FFFFFF; }
-
-.app-title {
-  padding: 0.75rem 0;
-  font-size: 1.5em;
-  color: #494949; }
-
-.banner {
-  display: flex;
-  height: 10em;
-  background-color: #F8F9F9;
-  border-radius: 3px;
-  align-items: center;
-  justify-content: center; }
-
-.slot {
-  display: flex;
-  flex-direction: row;
-  margin: 1rem 0;
-  flex-direction: column-reverse; }
-  @media (min-width: 426px) {
-    .slot {
-      flex-direction: row; } }
-  .slot .date-wrapper {
-    flex: auto;
-    width: 100%; }
-    @media (min-width: 426px) {
-      .slot .date-wrapper {
-        width: calc(95% * (1 / 3)); } }
-  .slot .count-time-wrapper {
-    display: flex;
-    flex: 1 0 auto;
-    width: 100%; }
-    @media (min-width: 426px) {
-      .slot .count-time-wrapper {
-        width: calc(95% * (2 / 3)); } }
-    .slot .count-time-wrapper > div {
-      flex: 1 0 auto; }
-  .slot select {
-    width: 100%;
-    height: 3.5em; }
-
-.week-view {
-  display: none; }
-  @media (min-width: 426px) {
-    .week-view {
-      display: flex;
-      justify-content: space-between; } }
-  .week-view .day {
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-    .week-view .day .desc {
-      flex: 1 0 auto;
-      font-size: 0.75em; }
-    .week-view .day .date-circle {
-      width: 2.5em;
-      height: 2.5em;
-      border-radius: 50%;
-      font-weight: bold;
-      line-height: 2.375em;
-      text-align: center; }
-      .week-view .day .date-circle.colored {
-        background-color: #A5724E;
-        color: #FFFFFF;
-        line-height: 2.375em;
-        border: 1px solid #A5724E; }
-      .week-view .day .date-circle.bordered {
-        line-height: 2.25em;
-        background-color: none;
-        color: #A5724E;
-        border: 2px solid #A5724E; }
-      .week-view .day .date-circle.disabled {
-        line-height: 2.25em;
-        background-color: #E5E7E9;
-        color: #A6ACAF;
-        border: 2px solid #E5E7E9; }
-      .week-view .day .date-circle.highlighted {
-        line-height: 2.25em;
-        background-color: #F9EBEA;
-        color: #E6B0AA;
-        border: 2px solid #F9EBEA; }
-    .week-view .day .v-divider {
-      flex: 1;
-      border-left: 1px dotted #A5724E;
-      margin-bottom: 0.25rem; }
-
-.schedule__title {
-  font-size: 1.25em;
-  padding: 1rem 0; }
-.schedule__card-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between; }
-  .schedule__card-wrapper .card {
-    display: flex;
-    flex-direction: column;
-    background: #BD987E;
-    color: #FFFFFF;
-    padding: 0.25rem 0.5rem;
-    border-radius: 3px;
-    margin-bottom: 0.5rem;
-    width: 49%; }
-    @media (min-width: 426px) {
-      .schedule__card-wrapper .card {
-        flex-direction: row;
-        padding: 1rem 0.5rem;
-        width: 32.5%; } }
-    .schedule__card-wrapper .card__time {
-      flex: 1 0 auto;
-      text-align: center; }
-    .schedule__card-wrapper .card__place {
-      flex: 1 0 auto;
-      text-align: center; }
-    .schedule__card-wrapper .card.disabled {
-      background-color: #E5E7E9;
-      color: #A6ACAF; }
-    .schedule__card-wrapper .card.highlighted {
-      background-color: #A5724E;
-      color: #FFFFFF; }
-    .schedule__card-wrapper .card.notify {
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      background-color: transparent;
-      border: 2px solid grey;
-      color: #494949; }
-      @media (max-width: 425px) {
-        .schedule__card-wrapper .card.notify {
-          min-height: 4em; } }
-      .schedule__card-wrapper .card.notify > div {
-        padding: 0 0.25rem; }
-
-main {
-  min-height: calc(100vh - 6rem); }
-  main .content-grid {
-    display: flex;
-    flex-direction: column;
-    flex: 1 0 auto; }
-
-footer {
-  display: flex;
-  align-items: center;
-  height: 3.5em;
-  background-color: #FFFFFF; }
-  footer .content-grid {
-    display: flex;
-    flex: 1 0 auto;
-    align-items: center;
-    justify-content: flex-start;
-    height: 100%; }
-  footer .content-wrapper {
-    display: flex;
-    align-items: center;
-    flex: 1 0 auto; }
-    footer .content-wrapper .circle {
-      width: 2em;
-      height: 2em;
-      border-radius: 50%;
-      line-height: 2em;
-      text-align: center;
-      background-color: transparent;
-      border: 1px solid darkgray;
-      margin-right: 0.75rem; }
-    footer .content-wrapper .title {
-      color: darkgray; }
-  footer .author-ref {
-    font-size: 0.625em;
-    justify-self: flex-end;
-    align-self: flex-end; }
-*/
 pre.prettyprint {
     display: block;
     overflow: auto;
