--- a/index.css
+++ b/index.css
@@ -57,10 +57,10 @@ body {
       font-size: 14px; } }
   @media (min-width: 426px) {
     body {
-      font-size: 16px; } }
+      font-size: 18px; } }
   @media (min-width: 769px) {
     body {
-      font-size: 18px; } }
+      font-size: 20px; } }
 
 pre.prettyprint {
     display: block;
@@ -266,6 +266,10 @@ div.table, div.informaltable {
 	overflow-x:auto;
   page-break-inside: avoid;
 }
+
+/*tr:nth-of-type(even) {
+  background-color: #f1f6fc;
+}*/
 
 table,td,th {
   border-collapse: collapse;
